--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -30,6 +30,16 @@
     update_cache: true
     cache_valid_time: 3600
 
+- name: Install gitea and database packages
+  ansible.builtin.package:
+    name:
+      - git
+      - postgresql
+      - postgresql-contrib
+      - python3-psycopg2
+      - gnupg
+    state: present
+
 - name: Ensure gitea GPG signing key is installed
   ansible.builtin.apt_key:
     url: "{{ gitea_deb_gpg }}"
@@ -43,18 +53,32 @@
 - name: Install gitea and database packages
   ansible.builtin.package:
     name:
-      - git
       - gitea
-      - postgresql
-      - postgresql-contrib
     state: present
+
+- name: Get postgresql Version
+  ansible.builtin.command: "psql --version"
+  changed_when: false
+  register: postgresql_version_raw
 
 - name: Set postgresql password encryption
   ansible.builtin.lineinfile:
-    path: "/etc/postgresql/{{ postgresql_version }}/main/postgresql.conf"
+    path: "/etc/postgresql/{{ postgresql_version_raw | regex_search('\\d\\d') }}/main/postgresql.conf"
     regexp: "^password_encryption = "
     insertafter: "^#password_encryption = "
     line: password_encryption = scram-sha-256
+
+- name: Ensure a locale exists
+  community.general.locale_gen:
+    name: en_US.UTF-8
+    state: present
+  notify: Restart postgresql service
+
+- name: Start postgresql service
+  ansible.builtin.service:
+    name: postgresql
+    state: started
+    enabled: true
 
 - name: Create the gitea database user
   community.postgresql.postgresql_user:
@@ -62,11 +86,6 @@
     password: "{{ gitea_db_password }}"
   become: true
   become_user: postgres
-
-- name: Ensure a locale exists
-  community.general.locale_gen:
-    name: en_US.UTF-8
-    state: present
 
 - name: Create the gitea database
   community.postgresql.postgresql_db:
@@ -81,7 +100,7 @@
 
 - name: Grant gitea user access to database
   community.postgresql.postgresql_pg_hba:
-    dest: "/etc/postgresql/{{ postgresql_version }}/main/pg_hba.conf"
+    dest: "/etc/postgresql/{{ postgresql_version_raw | regex_search('\\d\\d') }}/main/pg_hba.conf"
     contype: local
     users: "{{ gitea_db_user }}"
     databases: "{{ gitea_db_name }}"
@@ -95,31 +114,46 @@
   become: true
   become_user: postgres
 
+- name: Check if gitea config exists
+  ansible.builtin.stat:
+    path: /var/lib/gitea/custom/conf/app.ini
+  register: gitea_config_exists
+
 - name: Get current gitea config
   ansible.builtin.slurp:
     src: /var/lib/gitea/custom/conf/app.ini
   register: gitea_config
+  when: gitea_config_exists.stat.exists
 
 - name: Set tokens from config
   ansible.builtin.set_fact:
     gitea_internal_token: >
-      gitea_config.content |
+      {{ gitea_config.content |
       b64decode |
       regex_search('INTERNAL_TOKEN =(.*)') |
       regex_replace('INTERNAL_TOKEN =', '') |
-      regex_replace(' ', '')
+      regex_replace(' ', '') }}
     gitea_lfs_jwt_secret: >
-      gitea_config.content |
+      {{ gitea_config.content |
       b64decode |
       regex_search('LFS_JWT_SECRET =(.*)') |
       regex_replace('LFS_JWT_SECRET =', '') |
-      regex_replace(' ', '')
+      regex_replace(' ', '') }}
     gitea_jwt_secret: >
-      gitea_config.content |
+      {{ gitea_config.content |
       b64decode |
       regex_search('JWT_SECRET =(.*)') |
       regex_replace('JWT_SECRET =', '') |
-      regex_replace(' ', '')
+      regex_replace(' ', '') }}
+  when: gitea_config_exists.stat.exists
+
+- name: Ensure gitea configuration directory exists
+  ansible.builtin.file:
+    path: /var/lib/gitea/custom/conf
+    state: directory
+    owner: "{{ gitea_user_name }}"
+    group: "{{ gitea_user_group }}"
+    mode: "0755"
 
 - name: Ensure gitea configuration file exists
   ansible.builtin.template:
