--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -131,20 +131,17 @@
       {{ gitea_config.content |
       b64decode |
       regex_search('\nINTERNAL_TOKEN =(.*)') |
-      regex_replace('\nINTERNAL_TOKEN = ', '')
-      | trim }}
+      regex_replace('\nINTERNAL_TOKEN = ', '') }}
     gitea_lfs_jwt_secret: >
       {{ gitea_config.content |
       b64decode |
       regex_search('\nLFS_JWT_SECRET =(.*)') |
-      regex_replace('\nLFS_JWT_SECRET = ', '')
-      | trim }}
+      regex_replace('\nLFS_JWT_SECRET = ', '') }}
     gitea_jwt_secret: >
       {{ gitea_config.content |
       b64decode |
       regex_search('\nJWT_SECRET =(.*)') |
-      regex_replace('\nJWT_SECRET = ', '')
-      | trim }}
+      regex_replace('\nJWT_SECRET = ', '') }}
   when: gitea_config_exists.stat.exists
 
 - name: Ensure gitea configuration directory exists
