--- a/meta/main.yml
+++ b/meta/main.yml
@@ -25,7 +25,7 @@ galaxy_info:
   platforms:
     - name: Debian
       versions:
-        - bookworm
+        - all
 
   galaxy_tags: []
     # List tags for your role here, one per line. A tag is a keyword that describes
