--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -82,8 +82,8 @@
   community.postgresql.postgresql_user:
     name: "{{ gitea_db_user }}"
     password: "{{ gitea_db_password }}"
-  become: true
-  become_user: postgres
+  # become: true
+  # become_user: postgres
 
 - name: Create the gitea database
   community.postgresql.postgresql_db:
@@ -93,8 +93,8 @@
     lc_ctype: en_US.UTF-8
     template: template0
     owner: "{{ gitea_db_user }}"
-  become: true
-  become_user: postgres
+  # become: true
+  # become_user: postgres
 
 - name: Grant gitea user access to database
   community.postgresql.postgresql_pg_hba:
@@ -109,8 +109,8 @@
   community.postgresql.postgresql_user:
     db: "{{ gitea_db_name }}"
     name: "{{ gitea_db_user }}"
-  become: true
-  become_user: postgres
+  # become: true
+  # become_user: postgres
 
 - name: Check if gitea config exists
   ansible.builtin.stat:
