--- a/vars/main.yml
+++ b/vars/main.yml
@@ -3,10 +3,9 @@
 gitea_deb_gpg: https://packaging.gitlab.io/gitea/gpg.key
 gitea_deb_repo: deb https://packaging.gitlab.io/gitea gitea main
 
-# gitea_db_name: giteadb
-# gitea_db_user: gitea
 gitea_user_name: gitea
 gitea_user_group: gitea
 gitea_port: 3000
+gitea_app_name: Gitea
 
 gitea_path: /home/{{ gitea_user_name }}
