--- a/meta/main.yml
+++ b/meta/main.yml
@@ -3,6 +3,7 @@ galaxy_info:
   namespace: tychobrouwer
   author: Tycho Brouwer
   description: Install and configure gitea with postgresql
+  version: 1.0.0
 
   # If the issue tracker for your role is not on github, uncomment the
   # next line and provide a value
