--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -115,8 +115,12 @@
     --admin \
     --config /var/lib/gitea/custom/conf/app.ini
   register: gitea_admin_user_created
-  changed_when: '"user already exists" not in gitea_admin_user_created.stdout'
+  # changed_when: '"user already exists" not in gitea_admin_user_created.stderr'
   become: true
   become_user: "{{ gitea_user_name }}"
   vars:
     ansible_ssh_pipelining: false
+
+- name: debug
+  ansible.builtin.debug:
+    var: gitea_admin_user_created
