fix gitea create user command

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -108,20 +108,16 @@
 
 - name: Create Gitea admin user
   ansible.builtin.shell: |
-    gitea admin create user \
+    gitea admin user create \
     --name "{{ gitea_admin_user }}" \
     --password "{{ gitea_admin_password }}" \
     --email "{{ gitea_admin_email }}" \
     --admin \
     --config /var/lib/gitea/custom/conf/app.ini
   register: gitea_admin_user_created
-  # changed_when: '"user already exists" not in gitea_admin_user_created.stderr'
+  changed_when: '"user already exists" not in gitea_admin_user_created.stderr'
   become: true
   become_user: "{{ gitea_user_name }}"
   become_method: su
   vars:
     ansible_ssh_pipelining: false
-
-- name: debug
-  ansible.builtin.debug:
-    var: gitea_admin_user_created
