--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -108,15 +108,15 @@
 
 - name: Create Gitea admin user
   ansible.builtin.shell: |
-    gitea admin create-user \
-    --name "{{ gitea_admin_user }}" \
+    gitea admin user create \
+    --username "{{ gitea_admin_user }}" \
     --password "{{ gitea_admin_password }}" \
     --email "{{ gitea_admin_email }}" \
     --admin \
     --config /var/lib/gitea/custom/conf/app.ini
   register: gitea_admin_user_created
   changed_when: '"user already exists" not in gitea_admin_user_created.stderr'
-  failed_when: gitea_admin_user_created.rc != 0 and "user already exists" not in gitea_admin_user_created.stderr
+  failed_when: gitea_admin_user_created.rc != 0 and "user already exists"
   become: true
   become_user: "{{ gitea_user_name }}"
   become_method: su
